# api-sgp

./: .env  .gitignore  AGENTS.md  CONFIGURACAO_WORKERS.md  CONTEXT.md  DEPLOY_EXECUTAVEL.md  DEPLOY_FOR_KIDS.md  DEPLOY_RELEASES.md  DOCS.md  DOCUMENTACAO_COMPLETA.md  ESPECIFICACAO_API_RELATORIOS_FECHAMENTOS.md  MELHORIAS_CONCORRENCIA.md  MIDDLEWARE_METRICS.md  MIGRATIONS.md  Makefile  OTIMIZACOES_PERFORMANCE.md  README.md  analyze_orders.py  audit_concurrency_and_performance.md  check_backup_integrity.py  check_data_integrity.py  claude.en.md  claude.md  config.py  debug_validation.py  docs_deploy.md  fix_user_dates.py  logging_config.py  main.py  media_cleanup.py  pyproject.toml  requirements.txt  roteiro.md  seed_maquinas.py  test_designers_api.py  test_imports.py  test_stats_service.py
admin/: router.py
alembic/: env.py
auth/: models.py  router.py  schema.py  security.py
automacao/: __init__.py  router.py  schema.py
chat/: realtime.py
clientes/: router.py
database/: database.py  db_fake.py  init_users.py  recreate_users.py  run_migrations.py
db/: banco.db  banco.db-shm  banco.db-wal
designers/: router.py  schema.py
docs/: ALEMBIC.md  DEPLOY_INTRANET_AUTOMATIZADO.md  DOCS.md  MELHORIAS_CONCORRENCIA.md  MIGRACAO_SHARED.md  SYNC_OUTBOX.md  UPDATE_PROCESS.md  review-2026-01-28.md
envios/: router.py
fichas/: __init__.py  image_storage.py  router.py  schema.py
maquinas/: print_log_router.py  print_log_schema.py  router.py  schema.py
materiais/: router.py  schema.py  stats_service.py  stock_service.py
middleware/: __init__.py  metrics.py
(+489 files in other folders)
