[project]
name = "api-sistemas-fichas"
version = "1.0.20"
description = "API completa para gerenciamento de sistema de fichas de produção"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "uvicorn>=0.35.0",
    "hypercorn>=0.17.0",
    "sqlmodel>=0.0.16",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.1.1",
    "pytest>=8.4.1",
    "httpx>=0.28.1",
    "requests>=2.32.5",
    "aiosqlite>=0.22.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=5.0.0",
    "orjson>=3.11.5",
    "aiofiles>=25.1.0",
    "polars>=1.0.0",
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.1.0",
    "alembic>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
